# abb_libegm

./: .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  package.xml
.github/workflow/: windows-vcpkg.yml
.github/workflows/: ci_bionic.yml  ci_focal.yml  windows-vcpkg.yml
cmake/: abb_libegmConfig.cmake.in  abb_libegmConfigVersion.cmake.in  abb_libegmExtras.cmake.in
include/abb_libegm/: egm_base_interface.h  egm_common.h  egm_common_auxiliary.h  egm_controller_interface.h  egm_interpolator.h  egm_logger.h  egm_server.h  egm_trajectory_interface.h  egm_udp_server.h  visibility_control.h
proto/: README.md  egm.proto  egm_wrapper.proto  egm_wrapper_trajectory.proto
src/: egm_base_interface.cpp  egm_common.cpp  egm_common_auxiliary.cpp  egm_controller_interface.cpp  egm_interpolator.cpp  egm_logger.cpp  egm_server.cpp  egm_trajectory_interface.cpp  egm_udp_server.cpp
tests/: egm_common_auxiliary_test.cpp
