<?xml version="1.0"?>
<package>
  <name>abb_libegm</name>
  <version>1.0.0</version>
  <description>The abb_libegm package for easing the use of ABB Externally Guided Motion (EGM) product</description>

  <maintainer email="jon.tjerngren@se.abb.com">Jon Tjerngren</maintainer>

  <license>BSD 3-Clause</license>

  <author email="jon.tjerngren@se.abb.com">Jon Tjerngren</author>

  <url type="repository">https://github.com/ros-industrial/abb_libegm</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>protobuf-dev</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>protobuf</run_depend>
</package>
