<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>abb_libegm</name>
  <version>1.0.0</version>
  <description>Package for easing the use of ABB's Externally Guided Motion (EGM) product</description>
  <maintainer email="jon.tjerngren@se.abb.com">Jon Tjerngren</maintainer>
  <license>BSD 3-Clause</license>
  <url type="repository">https://github.com/ros-industrial/abb_libegm</url>
  <author email="jon.tjerngren@se.abb.com">Jon Tjerngren</author>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>boost</depend>
  <depend>protobuf-dev</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
